--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,42 @@
 baseURL = 'https://example.org/'
-languageCode = 'en-us'
+languageCode = 'en-US'
 title = 'My New Hugo Site'
-theme = 'ananke'
+
+[menus]
+  [[menus.main]]
+    name = 'Home'
+    pageRef = '/'
+    weight = 10
+
+  [[menus.main]]
+    name = 'Posts'
+    pageRef = '/posts'
+    weight = 20
+
+  [[menus.main]]
+    name = 'Tags'
+    pageRef = '/tags'
+    weight = 30
+
+[module]
+  [module.hugoVersion]
+    extended = false
+    min = '0.146.0'
+    [[module.mounts]]
+        source = 'assets'
+        target = 'assets'
+    [[module.mounts]]
+        disableWatch = true
+        source = 'hugo_stats.json'
+        target = 'assets/notwatching/hugo_stats.json'
+
+[build]
+    [build.buildStats]
+        enable = true
+    [[build.cachebusters]]
+        source = 'assets/notwatching/hugo_stats\.json'
+        target = 'css'
+    [[build.cachebusters]]
+        source = '(postcss|tailwind)\.config\.js'
+        target = 'css'
+
