Add "About" page content; update menu links to use URLs; adjust section title styling with Tailwind utility

--- a/hugo.toml
+++ b/hugo.toml
@@ -10,22 +10,22 @@ title = 'My New Hugo Site'
 
   [[menus.main]]
     name = 'About'
-    pageRef = '/about'
+    URL = '/about'
     weight = 20
 
   [[menus.main]]
     name = 'Directions'
-    pageRef = '/directions'
+    URL = '/directions'
     weight = 30
 
     [[menus.main]]
         name = 'Contact'
-        pageRef = '/contact'
+        URL = '/contact'
         weight = 30
 
     [[menus.main]]
         name = 'RSVP'
-        pageRef = '/rsvp'
+        URL = '/rsvp'
         weight = 30
 
 [module]
